unpackaged/main/default/objects/Account/fields/demo2_test__c.field-meta.xml
<CustomField>
    <fullName>demo2_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>demo2 test</label>
    <type>Checkbox</type>
</CustomField>