unpackaged/main/default/objects/Account/fields/demo3_test__c.field-meta.xml
<CustomField>
    <fullName>demo3_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>demo3 test</label>
    <type>Checkbox</type>
</CustomField>