unpackaged/main/default/objects/Account/fields/demo_test__c.field-meta.xml
<CustomField>
    <fullName>demo_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>demo test</label>
    <type>Checkbox</type>
</CustomField>