unpackaged/main/default/objects/Account/fields/finaldemo__c.field-meta.xml
<CustomField>
    <fullName>finaldemo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>finaldemo</label>
    <type>Checkbox</type>
</CustomField>